# pgShield

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  tmp.json  tmp_ret.json
agents/: config.yaml  install.sh  pgshield-agent.service
config/: default.yaml
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  db.rs  main.rs  scheduler.rs  system.rs
crates/server/src/api/: agents.rs  backups.rs  dashboard.rs  mod.rs  schedule.rs  storage.rs
scripts/: portproxy.ps1  setup-portproxy.ps1
static/: index.html
