[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
cron = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["cors", "fs"] }
