[package]
name = "pgshield-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pgshield-common = { path = "../common" }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10"
tokio-util = "0.7"
