[package]
name = "pgshield-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pgshield-common = { path = "../common" }

axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
cron = { workspace = true }
reqwest = { workspace = true }
sysinfo = "0.33"
jsonwebtoken = "9"
bcrypt = "0.16"
rand = "0.8"
sha2 = "0.10"
